--- a/lib/score/index.css
+++ b/lib/score/index.css
@@ -5,6 +5,7 @@
   height: 30px;
   line-height: 30px;
   border: 1px solid black;
+  background: #fff;
   margin: -1px 0 0 -1px;
   padding: 0 5px;
 }
