Add lower section

--- a/lib/game/index.css
+++ b/lib/game/index.css
@@ -5,6 +5,11 @@
 .scores {
   margin-right: 10px;
 }
+.upperSection {
+  margin-bottom: 10px;
+}
+.lowerSection {
+}
 .dice {
   margin-top: 17px;
 }
